@@ -1,3 +1,8 @@
+2002-09-02  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* mingwex/math/hypotl.c: Replace with version based on cephes
+	library.
+
 2002-08-28  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/sys/param.h: Add ENDIAN defines.
